--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 /shelf/
 /workspace.xml
 /venv/
-venv/
-venv
-.venv
 __pycache__/
-./__pycache__/
-/__pycache__/
-__pycache__
-.__pycache__
+/dist/
+/nagonbot.egg-info/
+develop-eggs/
+eggs/
+.eggs/
+*.egg-info/
+.installed.cfg
