Reorganizing files to release package

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,9 @@
-tensorflow
-random
+keras
 numpy
-pygame
 playsound==1.2.2
-os
-logging
-pickle
 fugashi
-json
-sqlite3
-datetime
-requests
 bs4
 gtts
-time
 unidic-lite
 mecab-python3
 selenium
