--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name  = nagonbot
-version = 0.1.27
+version = 1.0.0
 author = Gabriel Fioravante Di Sciascio (FDSGAB)
 maintainer = Gabriel Fioravante Di Sciascio (FDSGAB)
 description = Japanese Chatbot
@@ -11,7 +11,7 @@ long_description_content_type = text/markdown
 url = https://github.com/FDSGAB/nagonbot
 python_requires = >=3.7
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Environment :: Console
     License :: OSI Approved :: MIT License
     Intended Audience :: End Users/Desktop
