--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,11 @@ numpy==1.23.5
 keras==2.10.0
 pygame==2.1.3
 beautifulsoup4==4.11.1
-selenium==4.7.
+selenium==4.7.2
 gTTS==2.3.1
-playsound=1.2.2
+playsound==1.2.2
+requests==2.25.1
+urllib3==1.26.3
+webdriver_manager==3.8.5
+mecab-python3==1.0.6
+unidic-lite==1.0.7
