--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,4 @@ keywords = python, chatbot, japanese, nagon, bot, artificial intelligence, virtu
 packages = find:
 python_requires = >=3.7, <4
 include_package_data = True
-install_requires =
-    keras
-    numpy
-    selenium
+install_requires = file: requirements.txt
