Setup and requirements updated

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name  = nagonbot
-version = 1.0.0
+version = 1.0.2
 author = Gabriel Fioravante Di Sciascio (FDSGAB)
 maintainer = Gabriel Fioravante Di Sciascio (FDSGAB)
 description = Japanese Chatbot
@@ -22,6 +22,9 @@ keywords = python, chatbot, japanese, nagon, bot, artificial intelligence, virtu
 
 [options]
 packages = find:
-python_requires = >=3.7, <4
+python_requires = >=3.8, <4
 include_package_data = True
-install_requires = file: requirements.txt
+install_requires =
+    keras
+    numpy
+    selenium
