--- a/requirements.txt
+++ b/requirements.txt
@@ -3,88 +3,48 @@ astunparse==1.6.3
 async-generator==1.10
 attrs==22.2.0
 beautifulsoup4==4.11.2
-bleach==6.0.0
-bs4==0.0.1
-build==0.10.0
-CacheControl==0.12.11
 cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
-cleo==2.0.1
 click==8.1.3
 colorama==0.4.6
-crashtest==0.4.1
-distlib==0.3.6
-docutils==0.19
-dulwich==0.20.50
-filelock==3.9.0
 flatbuffers==23.1.21
 fugashi==1.2.1
 gast==0.4.0
 google-auth==2.16.1
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.51.1
+grpcio==1.51.3
 gTTS==2.3.1
 h11==0.14.0
 h5py==3.8.0
-html5lib==1.1
 idna==3.4
-importlib-metadata==6.0.0
-jaraco.classes==3.2.3
 jax==0.4.4
-jsonschema==4.17.3
 keras==2.12.0rc0
-keyring==23.13.1
 libclang==15.0.6.1
-lockfile==0.12.2
 Markdown==3.4.1
-markdown-it-py==2.1.0
 MarkupSafe==2.1.2
-mdurl==0.1.2
 mecab-python3==1.0.6
-more-itertools==9.0.0
-msgpack==1.0.4
+nagonbot==1.0.2
 numpy==1.23.5
 oauthlib==3.2.2
 opt-einsum==3.3.0
 outcome==1.2.0
 packaging==23.0
-pandas==1.5.3
-pexpect==4.8.0
-pkginfo==1.9.6
-platformdirs==2.6.2
 playsound==1.2.2
-poetry==1.3.2
-poetry-core==1.4.0
-poetry-plugin-export==1.3.0
 protobuf==4.22.0
-ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pygame==2.1.3
-Pygments==2.14.0
-pyproject_hooks==1.0.0
-pyrsistent==0.19.3
 PySocks==1.7.1
-python-dateutil==2.8.2
 python-dotenv==0.21.1
-python-version==0.0.2
-pytz==2022.7.1
-pywin32-ctypes==0.2.0
-rapidfuzz==2.13.7
-readme-renderer==37.3
 requests==2.28.2
 requests-oauthlib==1.3.1
-requests-toolbelt==0.10.1
-rfc3986==2.0.0
-rich==13.3.1
 rsa==4.9
-scipy==1.10.0
+scipy==1.10.1
 selenium==4.8.2
-shellingham==1.5.0.post1
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
@@ -97,19 +57,13 @@ tensorflow-estimator==2.12.0rc0
 tensorflow-intel==2.12.0rc0
 tensorflow-io-gcs-filesystem==0.30.0
 termcolor==2.2.0
-tomlkit==0.11.6
 tqdm==4.64.1
 trio==0.22.0
 trio-websocket==0.9.2
-trove-classifiers==2023.2.8
-twine==4.0.2
 typing_extensions==4.5.0
 unidic-lite==1.0.8
 urllib3==1.26.14
-virtualenv==20.19.0
 webdriver-manager==3.8.5
-webencodings==0.5.1
 Werkzeug==2.2.3
 wrapt==1.14.1
 wsproto==1.2.0
-zipp==3.14.0
