--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name  = nagonbot
-version = 1.0.2
+version = 1.0.3
 author = Gabriel Fioravante Di Sciascio (FDSGAB)
 maintainer = Gabriel Fioravante Di Sciascio (FDSGAB)
 description = Japanese Chatbot
@@ -24,7 +24,4 @@ keywords = python, chatbot, japanese, nagon, bot, artificial intelligence, virtu
 packages = find:
 python_requires = >=3.8, <4
 include_package_data = True
-install_requires =
-    keras
-    numpy
-    selenium
+install_requires = file: requires.txt
