Package setup update
Still not working properly

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name  = nagonbot
-version = 1.0.3
+version = 1.0.9
 author = Gabriel Fioravante Di Sciascio (FDSGAB)
 maintainer = Gabriel Fioravante Di Sciascio (FDSGAB)
 description = Japanese Chatbot
 long_description = file: README.md
-license = LICENSE.txt
+license = LICENSE
 license_content_type = text/markdown
 long_description_content_type = text/markdown
 url = https://github.com/FDSGAB/nagonbot
@@ -22,6 +22,17 @@ keywords = python, chatbot, japanese, nagon, bot, artificial intelligence, virtu
 
 [options]
 packages = find:
-python_requires = >=3.8, <4
+python_requires = >=3.8
 include_package_data = True
-install_requires = file: requires.txt
+install_requires = 
+    numpy
+    keras
+    selenium
+    pygame
+    tensorflow
+
+
+[options.packages.find]
+exclude =
+    tests*
+    docs*
