--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,106 @@
+[project]
+name  = "nagonbot"
+version = "1.0.8"
+description = "Japanese Chatbot"
+readme = "README.md"
+authors = [
+    { name = "Gabriel Fioravante Di Sciascio (FDSGAB)" }
+]
+maintainers = [
+    { name = "Gabriel Fioravante Di Sciascio (FDSGAB)" }
+]
+repository = "https://github.com/FDSGAB/nagonbot"
+license = { file = "LICENSE" }
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Environment :: Console",
+    "License :: OSI Approved :: MIT License",
+    "Intended Audience :: End Users/Desktop",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3",
+    "Operating System :: Microsoft :: Windows"
+]
+keywords = ["python", "chatbot", "japanese", "nagon", "bot", "artificial intelligence", "virtual assistant"]
+requires-python = ">=3.8"
+dependencies = [
+    "absl-py==1.4.0",
+    "astunparse==1.6.3",
+    "async-generator==1.10",
+    "attrs==22.2.0",
+    "beautifulsoup4==4.11.2",
+    "cachetools==5.3.0",
+    "certifi==2022.12.7",
+    "cffi==1.15.1",
+    "charset-normalizer==3.0.1",
+    "click==8.1.3",
+    "colorama==0.4.6",
+    "flatbuffers==23.1.21",
+    "fugashi==1.2.1",
+    "gast==0.4.0",
+    "google-auth==2.16.1",
+    "google-auth-oauthlib==0.4.6",
+    "google-pasta==0.2.0",
+    "grpcio==1.51.3",
+    "gTTS==2.3.1",
+    "h11==0.14.0",
+    "h5py==3.8.0",
+    "idna==3.4",
+    "jax==0.4.4",
+    "keras==2.12.0rc0",
+    "libclang==15.0.6.1",
+    "Markdown==3.4.1",
+    "MarkupSafe==2.1.2",
+    "mecab-python3==1.0.6",
+    "numpy==1.23.5",
+    "oauthlib==3.2.2",
+    "opt-einsum==3.3.0",
+    "outcome==1.2.0",
+    "packaging==23.0",
+    "playsound==1.2.2",
+    "protobuf==4.22.0",
+    "pyasn1==0.4.8",
+    "pyasn1-modules==0.2.8",
+    "pycparser==2.21",
+    "pygame==2.1.3",
+    "PySocks==1.7.1",
+    "python-dotenv==0.21.1",
+    "requests==2.28.2",
+    "requests-oauthlib==1.3.1",
+    "rsa==4.9",
+    "scipy==1.10.1",
+    "selenium==4.8.2",
+    "six==1.16.0",
+    "sniffio==1.3.0",
+    "sortedcontainers==2.4.0",
+    "soupsieve==2.4",
+    "tensorboard==2.12.0",
+    "tensorboard-data-server==0.7.0",
+    "tensorboard-plugin-wit==1.8.1",
+    "tensorflow==2.12.0rc0",
+    "tensorflow-estimator==2.12.0rc0",
+    "tensorflow-intel==2.12.0rc0",
+    "tensorflow-io-gcs-filesystem==0.30.0",
+    "termcolor==2.2.0",
+    "tqdm==4.64.1",
+    "trio==0.22.0",
+    "trio-websocket==0.9.2",
+    "typing_extensions==4.5.0",
+    "unidic-lite==1.0.8",
+    "urllib3==1.26.14",
+    "webdriver-manager==3.8.5",
+    "Werkzeug==2.2.3",
+    "wrapt==1.14.1",
+    "wsproto==1.2.0"
+]
+
+
 [build-system]
 requires = [
     "setuptools>=54",
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
+
+
+[tool.setuptools.packages.find]
+exclude = ["tests*", "docs*"]
